fixed alignment issue when zooming out, changed navigation to single page scrolling

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,134 @@
-
-.main{
-  margin-top: 3.5rem;
+html {
+  scroll-behavior: smooth;
 }
 
+.page-container{
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1280px;
+}
+
+.main{
+  margin-top: 3.45rem;
+}
+
+.contact-icons{
+  padding-right: 1rem;
+}
+
+.name{
+  color: #FCBF49;
+  font-weight: 500;
+  /* color: #fff; */
+}
+
+.section-header{
+  color: #14ABB5;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 1rem;
+}
+
+
+
+.icon-circle{
+  /* background-color:  #fff; */
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  /* display: flex; */
+  /* align-content: center; */
+  /* justify-content: center; */
+  padding: 3.5rem;
+  border-style: solid;
+  border-width: 0.3rem;
+  /* border-color: #fff; */
+  border-color: transparent;
+}
+
+
+
+.text-regular{
+  font-weight: 400;
+}
+.text-roboto{
+  font-family: 'Roboto', sans-serif;
+}
+.nav-bg {
+    background-color: rgb(0, 48, 73);
+}
+
+.blue-section{
+  background-color: #14ABB5;
+
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+.dp{
+    max-width: 300px;
+    width: 80%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.customNav{
+  background-color: #003049;
+}
+
+.header-icon{
+  color:  #fff;
+}
+.left-header h1{
+  color: #fff;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 1200px) {
+  .left-header{
+    padding-left: 5rem;
+  }
+}
+.skill-item{
+  border-width: 1;
+  border-style: solid;
+  /* border-color: #fff;  */
+  border-color: transparent;
+  /* padding-bottom: 0.5rem; */
+}
+
+@media (min-width: 1200px) {
+  .skill-item {
+    padding-right: 5rem;
+  }
+}
+
+
+.skill h3{
+  color: rgb(18, 46, 59);
+  /* color: #fff; */
+  font-size: 1.5rem;
+}
+
+.skill-bar{
+  width:50%;
+   max-width:500px;
+   height:1.5rem;
+   /* border:1px solid #000; */
+}
+.skill-bar-blue {
+  height:100%;
+  background-color:   rgba(0, 48, 73,0.7);
+}
+.skill-bar-white{
+  height:100%;
+  background-color:   #fff;
+}
 
 /* .navbar {
     position: relative;
@@ -17,6 +143,7 @@
     padding: 0.5rem 1rem;
     font-family: 'Roboto';
   }
+*/
   
   .navbar .container,
   .navbar .container-fluid, .navbar .container-sm, .navbar .container-md, .navbar .container-lg, .navbar .container-xl {
@@ -28,8 +155,10 @@
     align-items: center;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    padding-left: 0;
   }
-  
+
+  /*
   .navbar-brand {
     display: inline-block;
     padding-top: 0.3125rem;
@@ -386,8 +515,10 @@
   } */
 
   .jumbotron {
-    /* padding: 2rem 1rem;
-    margin-bottom: 2rem; */
+    /* padding: 2rem 1rem; */
+    padding-top: 3.5rem;
+    padding-bottom: 3rem;
+    /* margin-bottom: 2rem; */
     /* background-color: #e9ecef; */
     /* background-color: lightblue; */
     /* background-color: #f77f00; */
@@ -413,66 +544,3 @@ lightOrange: FCBF49 rgb(252, 191, 73)
 khaki: EAE2B7 rgb(234, 226, 183) */
 
 
-.name{
-  color: #FCBF49;
-  font-weight: 500;
-  /* color: #fff; */
-}
-
-.section-header{
-  color: #14ABB5;
-  font-weight: 500;
-  font-family: 'Roboto', sans-serif;
-}
-.text-regular{
-  font-weight: 400;
-}
-.text-roboto{
-  font-family: 'Roboto', sans-serif;
-}
-.nav-bg {
-    background-color: rgb(0, 48, 73);
-}
-
-.blue-section{
-  background-color: #14ABB5;
-
-}
-
-img{
-    width: 100%;
-    height: auto;
-}
-
-.dp{
-    max-width: 300px;
-    width: 80%;
-    height: auto;
-    border-radius: 50%;
-}
-
-.customNav{
-  background-color: #003049;
-}
-
-.skill-item{
-  border-width: 1;
-  border-style: solid;
-  /* border-color: #fff;  */
-  border-color: transparent;
-}
-
-.skill-bar{
-  width:50%;
-   max-width:500px;
-   height:1.5rem;
-   /* border:1px solid #000; */
-}
-.skill-bar-blue {
-  height:100%;
-  background-color:   rgb(0, 48, 73);
-}
-.skill-bar-white{
-  height:100%;
-  background-color:   #fff;
-}
